--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,39 @@
+name: Service A CI Pipeline
 
+on:
+  push:
+    branches:
+    - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Docker tag
+      id: version
+      run: |
+        export VERSION=$(grep -oP '"version":\s*"\K[0-9\.]+' package.json)
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+    # Build the Docker Image
+    - name: Build Docker Image
+      run: |
+        docker build . -t hishmath/nest-demo-service-a:${{ env.VERSION }}
+
+    # Push the Docker Image
+    - name: Push Docker Image
+      run: |
+        docker push hishmath/nest-demo-service-a:${{ env.VERSION }}
