--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,5 +49,5 @@ jobs:
         git config --global user.name "GitHub Actions Bot"
         git add deployment/deploy.yaml
         git commit -m "Update deploy.yaml with new image version - ${{ env.VERSION }}"
-        git remote set-url origin https://github-actions:${{ secrets.GH_TOKEN }}github.com/Hishmathdeen/nest-demo-service-a
+        git remote set-url origin https://github-actions:${{ secrets.GH_TOKEN }}@github.com/Hishmathdeen/nest-demo-service-a.git
         git push origin main
