CAT command removed from the github flow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,16 +36,13 @@ jobs:
       run: |
         docker push hishmath/nest-demo-service-a:${{ env.VERSION }}
 
-    # UPdate the K8s Manifest Files
     - name: Update K8s Manifests
       run: |
-        cat deployment/deploy.yaml
         sed -i "s|image: hishmath/nest-demo-service-a:.*|image: hishmath/nest-demo-service-a:${{ env.VERSION }}|g" deployment/deploy.yaml
-        cat deployment/deploy.yaml
-      # Update Github
+
     - name: Commit the changes
       run: |
-        git config --global user.email "<>"
+        git config --global user.email "<mailtohdeen@gmail.com>"
         git config --global user.name "GitHub Actions Bot"
         git add deployment/deploy.yaml
         git commit -m "Update deploy.yaml with new image version - ${{ env.VERSION }}"
