--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,10 @@ jobs:
       run: |
         sed -i "s|image: hishmath/nest-demo-service-a:.*|image: hishmath/nest-demo-service-a:${{ env.VERSION }}|g" deployment/deploy.yaml
 
-    - name: Update package version
-      run: |
-        npm version minor
-
     - name: Update the package json
       uses: actions/setup-node@v2
+
+    - name: update package json
       run: |
         npm version minor
 
