--- a/.github/workflows/tag_test.yaml
+++ b/.github/workflows/tag_test.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy_production:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith('refs/tags/v')
 
     steps:
       - name: Checkout code
