--- a/.github/workflows/tag_test.yaml
+++ b/.github/workflows/tag_test.yaml
@@ -6,12 +6,12 @@ on:
 jobs:
   deploy_production:
     runs-on: ubuntu-latest
-    if: startsWith('refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: fdsjdjfsd
+      - name: abc
         run: |
           npm install
