--- a/.github/workflows/devlop_ci_cd.yaml
+++ b/.github/workflows/devlop_ci_cd.yaml
@@ -70,3 +70,10 @@ jobs:
             Release created automatically by GitHub Actions.
           draft: false
           prerelease: ${{ env.prerelease }}
+
+      - name:  'Automated Version Bump'
+        uses:  'phips28/gh-action-bump-version@master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          version-type:  'patch'
