--- a/.github/workflows/devlop_ci_cd.yaml
+++ b/.github/workflows/devlop_ci_cd.yaml
@@ -78,3 +78,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           version-type:  'patch'
+          skip-tag:  'true'
